--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
 
             <div class="place__website">
               <p class="place__url-heading">URL</p>
-              <a href="https://vk.com/baikalmile" target="blank" class="plase__link">https://vk.com/baikalmile</a>
+              <a href="https://vk.com/baikalmile" target="blank" class="place__link">https://vk.com/baikalmile</a>
             </div> 
 
             <img src="./sprint-3-images/sprint-3-images/place-winter-baikal.jpg" class="place__image" alt="Замерзшая вода с трещинами">
@@ -172,7 +172,7 @@
 
             <div class="place__website">
               <p class="place__url-heading">URL</p>
-              <a href="http://vodlozero.ru" target="blank" class="plase__link">http://vodlozero.ru/</a>
+              <a href="http://vodlozero.ru" target="blank" class="place__link">http://vodlozero.ru/</a>
             </div> 
 
             <img src="./sprint-3-images/sprint-3-images/place-karelia.jpg" class="place__image" alt="Река в лесу">
