добавлены исправления в css

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
           <li class="header__item">
             <a class="header__lang-link header__lang-link_active" href="#">Ru</a>
           </li>
-          <li class="header__links">
+          <li class="header__item">
             <a class="header__lang-link">En</a>
           </li>
         </ul>
@@ -31,7 +31,7 @@
 
           <div class="lead__container">
             <img class="lead__image" src="sprint-3-images/sprint-3-images/lead-polka.jpg" alt="Плацкарт" />
-            <div class="lead__caption">ваша полка — верхняя</div>
+            <p class="lead__caption">ваша полка — верхняя</p>
           </div>
 
         </section>
