добавлены исправления в css

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   </head>
 
   <body class="page">
+    
       <header class="header">
         <img src="./sprint-3-images/sprint-3-images/header-logo.svg" class="header__logo" alt="карта россии">
         <ul class="header__links">
@@ -49,11 +50,11 @@
               Мы выбрали и описали некоторые интересные места, достойные вашего отпуска.</p>
 
             <ul class="intro__list">
-              <li class="intro__list-text">Часовых поясов 11</li>
-              <li class="intro__list-text">Объектов природного наследия ЮНЕСКО 12</li>
-              <li class="intro__list-text">Объектов культурного наследия ЮНЕСКО 16</li>
-              <li class="intro__list-text">Природных заповедников 105</li>
-              <li class="intro__list-text">Аэропортов 241</li>
+              <li><span class="intro__list-text">Часовых поясов</span> 11</li>
+              <li><span class="intro__list-text">Объектов природного наследия ЮНЕСКО</span> 12</li>
+              <li><span class="intro__list-text">Объектов культурного наследия ЮНЕСКО</span> 16</li>
+              <li><span class="intro__list-text">Природных заповедников</span> 105</li>
+              <li><span class="intro__list-text">Аэропортов</span> 241</li>
             </ul>
 
           </div>
