--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
   <body class="page">
     
-      <header class="header">
+      <header class="header page__header">
         <img src="./sprint-3-images/sprint-3-images/header-logo.svg" class="header__logo" alt="карта россии">
         <ul class="header__links">
           <li class="header__item">
